# cs2-build-analysis-automation

./: .files_config.json  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
